--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 author: Ribesg
-main: ${project.groupId}.${project.name}
+main: ${project.groupId}.${project.artifactId}.${project.name}
 name: ${project.name}
 description: ${project.description}
 url: ${project.url}
