--- a/pom.xml
+++ b/pom.xml
@@ -71,13 +71,38 @@
 
       <dependency>
          <groupId>net.minecraft.server</groupId>
-         <artifactId>release_1_7_10</artifactId>
+         <artifactId>r1_2_5</artifactId>
+         <version>1.2.5</version>
+      </dependency>
+      <dependency>
+         <groupId>net.minecraft.server</groupId>
+         <artifactId>r1_3_2</artifactId>
+         <version>1.3.2</version>
+      </dependency>
+      <dependency>
+         <groupId>net.minecraft.server</groupId>
+         <artifactId>r1_4_7</artifactId>
+         <version>1.4.7</version>
+      </dependency>
+      <dependency>
+         <groupId>net.minecraft.server</groupId>
+         <artifactId>r1_5_2</artifactId>
+         <version>1.5.2</version>
+      </dependency>
+      <dependency>
+         <groupId>net.minecraft.server</groupId>
+         <artifactId>r1_6_4</artifactId>
+         <version>1.6.4</version>
+      </dependency>
+      <dependency>
+         <groupId>net.minecraft.server</groupId>
+         <artifactId>r1_7_10</artifactId>
          <version>1.7.10</version>
       </dependency>
       <dependency>
          <groupId>net.minecraft.server</groupId>
-         <artifactId>release_1_8</artifactId>
-         <version>1.8</version>
+         <artifactId>r1_8_4</artifactId>
+         <version>1.8.4</version>
       </dependency>
 
    </dependencies>
