--- a/pom.xml
+++ b/pom.xml
@@ -101,8 +101,8 @@
       </dependency>
       <dependency>
          <groupId>net.minecraft.server</groupId>
-         <artifactId>r1_8_4</artifactId>
-         <version>1.8.4</version>
+         <artifactId>r1_8</artifactId>
+         <version>1.8</version>
       </dependency>
 
    </dependencies>
